--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=capxStockTreading
 
 server.port=8282
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/capxStock
+spring.datasource.url=jdbc:postgresql://localhost:5432/capx_Stock
 spring.datasource.username=postgres
 spring.datasource.password=agbo1212#
 spring.datasource.driver-class-name=org.postgresql.Driver
